# Template-fastapi

./: .gitignore  .pylintrc  README.md  mypy.ini  pipeline.bat  pyproject.toml  run.bat  run_dev.bat
alembic/: env.py
alembic/versions/: 990366078033_account.py
app/: config.py  main.py
app/api/: api_router_definition.py
app/api/router/v1/: account.py  authentication.py
app/core/securities/: auth.py
app/crud/: account.py
app/model/: account.py
app/schema/: account.py  auth.py  base.py
app/util/: database_util.py  datetime_util.py  exception_util.py  logger_util.py
